<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:layout_constraintTop_toTopOf="parent">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AddMeetingActivity"
    android:id="@+id/add_meeting_activity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField_date_addmeetingactivity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundTint="@color/black"
        android:hint="@string/pick_a_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/margin_16dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_baseline_calendar_24"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinputEditText_date_addmeetingactivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:inputType="date"
            android:gravity="center_horizontal"
            android:enabled="false"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField_starthour_addmeetingactivity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:foregroundTint="@color/black"
        android:hint="@string/starting_hour"
        app:layout_constraintEnd_toStartOf="@id/outlinedTextField_endhour_addmeetingactivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField_date_addmeetingactivity"
        android:layout_margin="@dimen/margin_16dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_baseline_access_time_24"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinputEditText_starthour_addmeetingactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:inputType="time"
            android:gravity="center_horizontal"
             />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField_endhour_addmeetingactivity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:layout_weight="0.5"
        android:foregroundTint="@color/black"
        android:hint="@string/ending_hour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/outlinedTextField_starthour_addmeetingactivity"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField_date_addmeetingactivity"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_baseline_access_time_24"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinputEditText_endhour_addmeetingactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_horizontal"

             />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField_subject_addmeetingactivity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundTint="@color/black"
        android:hint="@string/specify_a_subject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField_starthour_addmeetingactivity"
        android:layout_margin="@dimen/margin_16dp"
        app:startIconDrawable="@drawable/ic_baseline_subject_24"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinputEditText_subject_addmeetingactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdown_menu_rooms_addmeetingactivity"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_room"
        android:layout_margin="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField_subject_addmeetingactivity"
        app:startIconDrawable="@drawable/ic_baseline_location_24"
        app:errorEnabled="true"
        app:helperTextEnabled="true"

        >

        <AutoCompleteTextView
            android:id="@+id/autoComplete_rooms_addmeetingactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

<androidx.core.widget.NestedScrollView
    android:id="@+id/scrollView_list_of_users"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    app:layout_constraintTop_toBottomOf="@id/dropdown_menu_rooms_addmeetingactivity"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_margin="@dimen/margin_16dp"
    android:scrollbarAlwaysDrawVerticalTrack="true"


    >
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField_users_addmeetingactivity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:hint="@string/list_of_participants"
        android:foregroundTint="@color/black"
        android:background="@color/whitesmoke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dropdown_menu_rooms_addmeetingactivity"


        app:placeholderText="@string/list_of_participants"
        app:errorEnabled="true"

        >
    </com.google.android.material.textfield.TextInputLayout>
</androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/outlinedButton_create_addmeetingactivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_new_meeting"
        android:layout_margin="@dimen/margin_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView_list_of_users"
        style="?attr/materialButtonOutlinedStyle"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>